music-app (2.5) UNRELEASED; urgency=medium

  * Release 2.4 and start 2.5
  * Remove gstreamer0.10-fluendo-mp3 plugin from control as 1.0 should instead be used

 -- Andrew Hayzen <ahayzen@gmail.com>  Wed, 03 Aug 2016 21:57:36 +0100

music-app (2.4) xenial; urgency=medium

  [ Victor Thompson ]
  * Release 2.3 and start 2.4
  * Remove repeater for getting album titles in Artists.qml (LP: #1515067).
  * Change translation strings from song to track (LP: #1378143).
  * Ensure that only one ContentHubExport page is open (LP: #1538863).
  * Fix fallback image path in MusicListItem (LP: #1549580).
  * Fix regression where AddToPlaylist.qml no long supports plural track counts (LP: #1550832).
  * Remove offset from the top of AddToPlaylist.qml (LP: #1538832).
  * Fix topMargin of the Playlists empty state so title is not obscurred (LP: #1538829).
  * Fix fallback art when the it is linked to the Player's currentMeta (LP: #1549557).
  * Update a number of components to work properly with new color palette in the SDK (LP: #1550096).
  * Fix the Search TextField component color so the text is not invisible when field is not in focus (LP: #1550096).

  [ Andrew Hayzen ]
  * Fix so that a press and hold cannot disable selection in the ContentHubExport.qml (LP: #1538838)
  * Implement convergent mode with now playing and queue as a sidebar (LP: #1253761)

  [ Ken VanDine ]
  * Bump Ubuntu.Content import to 1.3 to fix theme issue

 -- Andrew Hayzen <ahayzen@gmail.com>  Wed, 03 Aug 2016 21:57:15 +0100

music-app (2.3) vivid; urgency=medium

  [ Andrew Hayzen ]
  * Release 2.2ubuntu2 and start on 2.3
  * Use ListItemLayout for listitems to improve performance and match design guidelines (LP: #1526247).
  * Switch to using Qt GridView instead of custom CardView
  * Add support for media-hub background playlists
  * Bump framework to 15.04.3-qml
  * Bump QtMultimedia import to 5.6

  [ Ken VanDine ]
  * Install the content-hub json file in the correct place for peer registry
