@@ -34,6 +34,7 @@ State {
                     backActionComponent
                 }
             }
+            objectName: "tabsLeadingActionBar"
         }
         title: thisPage.title
         trailingActionBar {
