@@ -36,6 +36,7 @@ State {
                     backActionComponent
                 }
             }
+            objectName: "tabsLeadingActionBar"
         }
         title: thisPage.title
         trailingActionBar {
